# Server

./: README.md  pyproject.toml
Server/app/core/: settings.py
