[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Harikeshav R <r.harikeshav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pylast = "^5.2.0"
yt-dlp = "^2023.12.30"
fastapi = {extras = ["all"], version = "^0.110.0"}
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
